update:前后端全流程跑通 & 登陆注册及其鉴权

--- a/fe/dev/index.html
+++ b/fe/dev/index.html
@@ -1024,7 +1024,7 @@ var _hmt = _hmt || [];
 <!-- jQuery 2.2.3 -->
 <script src="./public/libs/jquery-2.2.3.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
-<script src="../public/libs/jquery-ui.min.js"></script>
+<script src="./public/libs/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
   $.widget.bridge('uibutton', $.ui.button);
