update: 基本完成创建页/编辑/删除/列表页/分页的开发

--- a/fe/dev/index.html
+++ b/fe/dev/index.html
@@ -305,7 +305,7 @@ var _hmt = _hmt || [];
       <ul class="sidebar-menu">
         <li class="header">主导航</li>
         <li class="nav active"><a href="/#/"><i class="fa fa-book"></i> <span>首页</span></a></li>
-        <li class="nav"><a href="/#/position"><i class="fa fa-book"></i> <span>文档</span></a></li>
+        <li class="nav"><a href="/#/position"><i class="fa fa-book"></i> <span>职位管理</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
